# GFMBench-api

./: .gitignore  README.md  basic_requirements.txt  pyproject.toml
gfmbench_api/: __init__.py
gfmbench_api/tasks/: __init__.py
gfmbench_api/tasks/base/: base_gfm_supervised_multiclass_task.py  base_gfm_task.py  base_gfm_zero_shot_task.py
gfmbench_api/tasks/concrete/: __init__.py  bend_vep_disease_task.py  bend_vep_expression_task.py  brca1_task.py  clinvar_indel_task.py  clinvar_vepeval_task.py  gue_promoter_all_task.py  gue_splice_site_task.py  gue_tf_all_task.py  loleve_causal_eqtl_task.py  lrb_causal_eqtl_task.py  lrb_pathogenic_omim_task.py  songlab_clinvar_task.py  traitgym_complex_task.py  traitgym_mendelian_task.py  variant_benchmarks_coding_task.py  variant_benchmarks_common_vs_rare_task.py  variant_benchmarks_expression_task.py  variant_benchmarks_meqtl_task.py  variant_benchmarks_non_coding_task.py  variant_benchmarks_sqtl_task.py
gfmbench_api/utils/: caching_utils.py
tests/: README.md  conftest.py  test_brca1_max_num_samples.py
tests/e2e/: baseline_utils.py  conftest.py  fixture_tasks.py  test_download.py  test_heavy.py  test_smoke.py
tests/fixtures/: dnabert2_sanity_baseline.csv
tests/fixtures/data/fixture_variant/: train.csv
tests/fixtures/data/gue_promoter_all/: test.csv
tests/unit/: test_caching_utils.py
usage_examples/: benchmark_runner.py  run_benchmark.py
usage_examples/sanity_models/: dna_bert2_model.py  evo2_model.py  ntv3_model.py
usage_examples/trainers/: finetuner.py  model_wrapper.py
