[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gfmbench-api"
version = "0.1.0"
description = "GFMBench-API — genomic foundation model benchmarking middleware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "transformers==4.57.1",
    "tokenizers>=0.22.0,<0.23.0",
    "datasets",
    "scikit-learn",
    "scipy",
    "biopython",
    "pyfaidx",
    "tqdm",
    "PyYAML",
    "requests",
    "huggingface_hub",
    "einops",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["gfmbench_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
